# python-project-lvl3

./: Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  pyci.yml
page_loader/: __init__.py  cli.py  common.py  errors.py  fs.py  html.py  loader.py  loading.py  logging.py  names.py  naming.py  paths.py  resources.py  storage.py  url.py  urls.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  fixtures.py  test_html.py  test_loading.py  test_page_loader.py  test_paths.py  test_resources.py  test_url.py  utils.py
tests/fixtures/: expected-page.html  page.html  with_resources.html
tests/fixtures/assets/: runtime.js
