[tool.poetry]
name = "hexlet_project"
version = "0.1.0"
description = ""
authors = ["mkaraev <maruf.karaev97@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
progress = "^1.5"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
coverage = "^5.3"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
page-loader="page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
